mdapi/Custom/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Cancel_Eviction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Eviction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Markets_Email__c</fullName>
        <defaultValue>&apos;capitalmarketsalerts@invitationhomes.com&apos;</defaultValue>
        <description>This field is used in Residence and Portfolio Email Alerts pertaining to changes to fields as requested in Support Requests (Regional Controller Queues).</description>
        <label>Capital Markets Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>Use this field for doing VLOOKUP on ID, which requires the 18-character ID.</inlineHelpText>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Duration_Days__c</fullName>
        <label>Change Duration (Days)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Value__c</fullName>
        <label>Change Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Comp_Post_Acq_Purch_Rented_Rehabs__c</fullName>
        <label># Closed Comp Post Acq Pur Rented Rehabs</label>
        <summaryFilterItems>
            <field>Rehab__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Post Acquisition – Purchased Rented</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Rehab__c.Stage__c</field>
            <operation>equals</operation>
            <value>Closed - Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Rehab__c.Portfolio__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Closed_Completed_Post_Acq_Rehabs__c</fullName>
        <label># Closed Completed Post Acq Rehabs</label>
        <summaryFilterItems>
            <field>Rehab__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Post-Acquisition</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Rehab__c.Stage__c</field>
            <operation>equals</operation>
            <value>Closed - Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Rehab__c.Portfolio__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completion_Date_Est_Rehab_Start__c</fullName>
        <label>Completion Date Est. @ Rehab Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comps__c</fullName>
        <label>Comps</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_of_Roof__c</fullName>
        <label>Condition of Roof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constable_Lock_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
Eviction Status</inlineHelpText>
        <label>Constable Lock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Attempt_Notice_1_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
TIP Status
Initial Contact Status</inlineHelpText>
        <label>Contact Attempt Notice 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Attempt_Notice_2_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
TIP Status
Initial Contact Status</inlineHelpText>
        <label>Contact Attempt Notice 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Attempt_Notice_3_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
TIP Status
Initial Contact Status</inlineHelpText>
        <label>Contact Attempt Notice 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Price_Discount_to_Max_Bid__c</fullName>
        <label>Contract Price Discount to Max Bid</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Price_PSF__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
  Contract_Price__c /Square_Feet__c,
  null
)</formula>
        <label>Contract Price PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Price_Prior_Value__c</fullName>
        <label>Contract Price Prior Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Price__c</fullName>
        <inlineHelpText>Contract Price and Actual Acquisition Price should be the same amount unless there&apos;s a value in Credits at Close.  Refer to the Help Text on those two fields for more information.</inlineHelpText>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Price_as_prct_Market_Value_UW__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0,
	Contract_Price__c / Market_Value_UW__c,
	null
)</formula>
        <label>Contract Price as % of Market Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_Active_Post_Acquisition_Rehabs__c</fullName>
        <description>Number of Active Post-Acquisition Rehab . &quot;Active&quot; means a Rehab in any Stage except &quot;Closed - Cancelled&quot;.</description>
        <label># Active Post Acquisition Rehabs</label>
        <summaryFilterItems>
            <field>Rehab__c.Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed - Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Rehab__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Post-Acquisition</value>
        </summaryFilterItems>
        <summaryForeignKey>Rehab__c.Portfolio__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Create_Property_Level_Box_Folders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Property Level Box Folders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credits_at_Close__c</fullName>
        <inlineHelpText>Credits at close in lieu of purchase price reduction only. Enter as a negative number.</inlineHelpText>
        <label>Credits at Close</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Deed_Status__c</fullName>
        <label>Current Deed Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Deed</fullName>
                </value>
                <value>
                    <fullName>Unrecorded Deed</fullName>
                </value>
                <value>
                    <fullName>Recorded Deed</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Occupancy_Status__c</fullName>
        <formula>Acq_Pipeline__r.Occupied_Status_Acquisition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Occupancy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Property_Status__c</fullName>
        <label>Current Property Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prehab - TIP</fullName>
                </value>
                <value>
                    <fullName>Prehab  - Hold for Deed</fullName>
                </value>
                <value>
                    <fullName>Prehab - Hold for BK</fullName>
                </value>
                <value>
                    <fullName>Rehab - Post Acq</fullName>
                </value>
                <value>
                    <fullName>Rehab - Turn</fullName>
                </value>
                <value>
                    <fullName>Listed on Market</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DK_Assigned_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
Initial Contact Status</inlineHelpText>
        <label>DK Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DK_Driver_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DK Driver Assigned</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>3rd Party</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DK_Driver_Assigned_old__c</fullName>
        <label>DK Driver Assigned_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DK_Driver_Names__c</fullName>
        <formula>DK_Driver_Assigned__r.FirstName + &apos; &apos; + DK_Driver_Assigned__r.LastName  + &apos;^&apos; +  Assigned_DK_Driver__r.FirstName + &apos; &apos; + Assigned_DK_Driver__r.LastName   +&apos;^&apos; +  TIP_Team_Manager__r.FirstName + &apos; &apos; + TIP_Team_Manager__r.LastName   +&apos;^&apos;+ TIP_Coordinator__r.FirstName + &apos; &apos; + TIP_Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DK Driver Names</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Deed_Recorded__c</fullName>
        <label>Date Deed Recorded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sold__c</fullName>
        <label>Date Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Insurance_Inspection__c</fullName>
        <formula>Residence__r.Date_Submitted_for_Insurance_Inspection__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Date Submitted for Insurance Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Insurance_Inspection__c</fullName>
        <formula>Residence__r.Date_of_Insurance_Inspection__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Date of Insurance Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Payment__c</fullName>
        <label>Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_since_Acquisition__c</fullName>
        <formula>Today()- Acquisition_Date__c</formula>
        <label>Days since Acquisition</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_end_of_Statutory_Notice_Period__c</fullName>
        <description>Sub in Eviction_Statutory_Notice_Period_Calc_Z__c when ready</description>
        <formula>Eviction_Statutory_Notice_Period__c - (TODAY()-Initial_Eviction_Notice_Date__c)</formula>
        <label>Days to end of Statutory Notice Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deed_Effective_Date__c</fullName>
        <label>Deed Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deed_Received_Date__c</fullName>
        <label>Unrecorded Deed Recv&apos;d Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deed_Status_Notes__c</fullName>
        <inlineHelpText>Following the following format when entering notes: Date(MM/DD/YYYY) - Your Name: Note.  Maximum length is 255.</inlineHelpText>
        <label>Deed Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deed_Status__c</fullName>
        <formula>IF(
	NOT(ISBlank( Recorded_Deed_Date__c )),
	 $Setup.Status_Tags__c.DS_Deed_Recorded__c ,
	IF(
		NOT(ISBLANK(Deed_Received_Date__c )),
		$Setup.Status_Tags__c.DS_Deed_Received__c ,

             IF(
                   OR(
                             AND(NOT(ISBLANK( BK_Filing_Date__c )),  BK_Filing_Date__c&lt;Acquisition_Date__c),
                             ISPICKVAL( Proxy_BK_Status__c , &quot;PreAcq BK&quot;),
                             AND(NOT(ISBLANK( BK_Filing_Date__c )),  BK_Filing_Date__c&gt;Acquisition_Date__c, ISBLANK( BK_Resolved_Date__c )),
                             ISPICKVAL(Proxy_BK_Status__c, &quot;PostAcq BK Unresolved&quot;)),
                     &quot;&quot;,

                       IF(
				AND(
					OR(
						NOT(ISBLANK(TIP_New_Lease_Signed_Date__c)),
						NOT(ISBLANK(TIP_Prior_Lease_Accepted_Date__c)),
                                                ISPICKVAL( Proxy_TIP_Lease_Signed__c, &quot;1&quot;),
						NOT(ISBLANK( LeaseSign_Date_First_Tenant__c )),
						NOT(ISBLANK(Rehab_Start_Date__c)),
                                                NOT(ISBLANK( Rehab_Completed_Date__c)),
                                                TEXT( Occupied_Status_Acquisition__c )=  $Setup.Status_Tags__c.OSAQ_Purchased_Rented__c,
                                                 Leased_Unit__c =1
					),
					ISBLANK(Deed_Received_Date__c),
					ISBLANK(Recorded_Deed_Date__c)
				),
				 $Setup.Status_Tags__c.DS_TBD__c ,
                      IF(
			AND(
				OR(
					TEXT(Post_Acquisition_Next_Step__c) = $Setup.Status_Tags__c.PANS_Refer_to_Rehab__c,
					TEXT(Post_Acq_Occupancy_Assessment__c) = $Setup.Status_Tags__c.OSAQ_Vacant__c,
					NOT(ISBLANK(CFK_Actual_Move_Out_Date__c)),  ISPICKVAL(Proxy_CFK_Complete__c,&quot;1&quot;),
                                        ISPICKVAL(Proxy_Eviction_Complete__c,&quot;1&quot;),
					NOT(ISBLANK( Eviction_Complete_Date__c )),
                                        ISPICKVAL(Proxy_Waiting_for_Deed__c, &quot;1&quot;)
				),
				ISBLANK(Deed_Received_Date__c),ISBLANK(Recorded_Deed_Date__c),
				ISBLANK( Rehab_Start_Date__c ), ISBLANK( Rehab_Completed_Date__c )
			),
			 $Setup.Status_Tags__c.DS_Waiting_for_Deed__c ,
						IF(
					AND(
						ISBLANK(Deed_Received_Date__c),
						ISBLANK(Deed_Received_Date__c)
					),
					 $Setup.Status_Tags__c.DS_Deed_Not_Yet_Received__c ,
					&quot;&quot;
				)
			)
		)
	)
))</formula>
        <inlineHelpText>The following Status fields are dependent on this field:
Rehab Status</inlineHelpText>
        <label>Deed Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difference_Today_Acquisition_Date__c</fullName>
        <formula>TODAY() -  Acquisition_Date__c</formula>
        <label>Difference Today &amp; Acquisition Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Premium_to_Future_Replace__c</fullName>
        <formula>IF((Sale_Price__c) &gt; 0,
Future_Replacement_Cost__c / Sale_Price__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount / (Premium) to Future Replace</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Premium_to_Peak_Value__c</fullName>
        <formula>IF((Sale_Price__c) &gt; 0,
Previous_High_Value__c / Sale_Price__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount / (Premium) to Peak Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Down_Time_Est_UW__c</fullName>
        <label>Down Time Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downtime_Assumption_months_Lease_1__c</fullName>
        <label>Downtime Assumption (months) - Lease 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downtime_Assumption_months_Lease_2__c</fullName>
        <label>Downtime Assumption (months) - Lease 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downtime_Assumption_months_Lease_3__c</fullName>
        <label>Downtime Assumption (months) - Lease 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drive_Report_Notes__c</fullName>
        <inlineHelpText>This field will be shared with Rehab and should contain information related to the Rehab Budget Est. @ UW.</inlineHelpText>
        <label>Drive Report Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Statuses__c</fullName>
        <label>Email Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eviction_Attorney_Fee_Estimate__c</fullName>
        <label>Eviction Attorney Fee Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eviction_Attorney_Invoice_Amount__c</fullName>
        <label>Eviction Attorney Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eviction_Attorney_Invoice_Date__c</fullName>
        <label>Eviction Attorney Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eviction_Attorney_Invoice__c</fullName>
        <label>Eviction Attorney Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eviction_Attorney_Law_Firm1__c</fullName>
        <description>This is one of the historic fields.  I am temporarily using it to map some Yardi values to support the listing data load.  (JH 6/29)</description>
        <label>Y1_Eviction Attorney Law Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eviction_Attorney_Law_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eviction Attorney Law Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio (Eviction Attorney Law Firm)</relationshipLabel>
        <relationshipName>Properties5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eviction_Attorney_Ref_ID__c</fullName>
        <label>Eviction Attorney Ref ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eviction_Cancellation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eviction Cancellation Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Properties11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eviction_Complete_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
TIP Status
Eviction Status
Occupied Status @ Current</inlineHelpText>
        <label>Eviction Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eviction_Court_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
Eviction Status</inlineHelpText>
        <label>Eviction Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eviction_Notes__c</fullName>
        <inlineHelpText>Following the following format when entering notes: Date(MM/DD/YYYY) - Your Name: Note</inlineHelpText>
        <label>Eviction Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eviction_Status__c</fullName>
        <label>Eviction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Constable Lock</fullName>
                </value>
                <value>
                    <fullName>Awaiting Eviction Court Date</fullName>
                </value>
                <value>
                    <fullName>Awaiting Eviction Writ</fullName>
                </value>
                <value>
                    <fullName>Constable Lock Complete</fullName>
                </value>
                <value>
                    <fullName>Eviction Aborted</fullName>
                </value>
                <value>
                    <fullName>Eviction Complete</fullName>
                </value>
                <value>
                    <fullName>Eviction Letter Sent</fullName>
                </value>
                <value>
                    <fullName>Initial Eviction Notice Sent</fullName>
                </value>
                <value>
                    <fullName>Recommended for Eviction</fullName>
                </value>
                <value>
                    <fullName>Referred to Eviction Attorney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eviction_Statutory_Notice_Period_Calc_Z__c</fullName>
        <description>Substitute in Days to End of Statutory Notice Period</description>
        <formula>TODAY() - Initial_Eviction_Notice_Date__c</formula>
        <label>Eviction Statutory Notice Period Calc Z</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eviction_Statutory_Notice_Period__c</fullName>
        <label>Eviction Statutory Notice Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eviction_Writ_Sign_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
Eviction Status</inlineHelpText>
        <label>Eviction Writ Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Month__c</fullName>
        <label>Exit Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exit_Year__c</fullName>
        <label>Exit Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exp_Gross_Monthly_Rent_UW__c</fullName>
        <inlineHelpText>Edits to this field must be done by a Salesforce System Administrator.</inlineHelpText>
        <label>Expected Gross Monthly Rent @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Annual_Rent_UW__c</fullName>
        <formula>Exp_Gross_Monthly_Rent_UW__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Annual Rent @ UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Mo_Rent_UW_Prior_Value__c</fullName>
        <label>Expected Gross Mo. Rent @ UW Prior Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Inflation__c</fullName>
        <label>Expense Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fed_Ref__c</fullName>
        <label>Fed Ref #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Rehab_Cost__c</fullName>
        <label>Final Rehab Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financed_Date__c</fullName>
        <label>Financed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financed_Fund__c</fullName>
        <label>Financed Fund</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IH1</fullName>
                </value>
                <value>
                    <fullName>IH2</fullName>
                </value>
                <value>
                    <fullName>IH3</fullName>
                </value>
                <value>
                    <fullName>IH4</fullName>
                </value>
                <value>
                    <fullName>IH5</fullName>
                </value>
                <value>
                    <fullName>IH6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financed__c</fullName>
        <label>Financed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flood_Zone__c</fullName>
        <label>Flood Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Potential Sale Candidate</inlineHelpText>
        <label>Non-Core Disposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Prior_Value__c</fullName>
        <label>Fund Prior Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <description>Initialize any portfolio record whose create Date &lt; FTD (4/3/2013) to &quot;01&quot;
Any portfolio record created thereafter (whose create Date &gt;= FTD) needs to have its Fund set by porting from Pipeline object</description>
        <inlineHelpText>This field is editable only by a System Administrator.  Please submit an SF Request to have it changed.</inlineHelpText>
        <label>Fund</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Replacement_Cost__c</fullName>
        <label>Future Replacement Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>G2GeoStatus__c</fullName>
        <label>G2GeoStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New address</fullName>
                </value>
                <value>
                    <fullName>No close match</fullName>
                </value>
                <value>
                    <fullName>Confirmed address</fullName>
                </value>
                <value>
                    <fullName>Custom location</fullName>
                </value>
                <value>
                    <fullName>Automatic match</fullName>
                </value>
                <value>
                    <fullName>Approximate match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G2MapWindowImage__c</fullName>
        <label>G2MapWindowImage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>G2Photo__c</fullName>
        <label>G2Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GP_Actual_Lease_Amt__c</fullName>
        <formula>IF(
Actual_Lease_Amt__c  &gt; 0,
(&apos;$&apos; +
IF(
 Actual_Lease_Amt__c  &gt;= 1000000,
TEXT(FLOOR(Actual_Lease_Amt__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
Actual_Lease_Amt__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Actual_Lease_Amt__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Actual_Lease_Amt__c)), 3)
),
&apos;&apos;
)</formula>
        <label>Actual Rent Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_All_In_Label__c</fullName>
        <formula>&apos;$&apos; +  TEXT(All_In_Cost_Est_UW__c) + &apos; &apos; + &apos;/&apos; + &apos; &apos; + &apos;$&apos; +  TEXT(ROUND(All_In_Cost_PSF_Est_UW__c,0)) + &apos; &apos; + &apos;psf&apos;</formula>
        <label>All-In Basis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Asking_Rent_First_Lease__c</fullName>
        <formula>IF(
Asking_Rent_First_Lease__c &gt; 0,
(&apos;$&apos; +
IF(
 Asking_Rent_First_Lease__c  &gt;= 1000000,
TEXT(FLOOR(Asking_Rent_First_Lease__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
Asking_Rent_First_Lease__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Asking_Rent_First_Lease__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Asking_Rent_First_Lease__c)), 3)
) ,&apos;&apos;)</formula>
        <label>Asking Rent (Market)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Bed_Bath__c</fullName>
        <formula>TEXT(Bedrooms__c) + &apos; &apos; + &apos;/&apos; + &apos; &apos; + TEXT(Baths__c)</formula>
        <label>Bed / Baths</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Gross_Yield_Est_UW__c</fullName>
        <formula>TEXT( ROUND(Gross_Yield_Est_UW__c*100 , 1)) + &apos;%&apos;</formula>
        <label>Gross Yield @ UW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Lease_Category__c</fullName>
        <label>Lease Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Lease_Status__c</fullName>
        <label>Lease Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Market_Value_Label__c</fullName>
        <formula>&apos;$&apos; +
IF(
 Market_Value_UW__c  &gt;= 1000000,
TEXT(FLOOR(Market_Value_UW__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
Market_Value_UW__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Market_Value_UW__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Market_Value_UW__c)), 3)
+ &apos; &apos; + &apos;/&apos; + &apos; &apos; + &apos;$&apos; +
IF(
 Market_Value_PSF_UW__c  &gt;= 1000000,
TEXT(FLOOR(Market_Value_PSF_UW__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
Market_Value_PSF_UW__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Market_Value_PSF_UW__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Market_Value_PSF_UW__c)), 3)
+ &apos; &apos; + &apos;psf&apos;</formula>
        <label>Market Value @ UW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Occupancy__c</fullName>
        <label>Occupancy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Previous_High_Label__c</fullName>
        <formula>&apos;$&apos; + 
IF( 
Previous_High_Value__c &gt;= 1000000, 
TEXT(FLOOR(Previous_High_Value__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Actual_Acquisition_Price__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Previous_High_Value__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Previous_High_Value__c)), 3) 
+ &apos; &apos; + &apos;/&apos; + &apos; &apos; + &apos;$&apos; + 
IF( 
Previous_High_Value_PSF__c &gt;= 1000000, 
TEXT(FLOOR(Previous_High_Value_PSF__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Previous_High_Value_PSF__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Previous_High_Value_PSF__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Previous_High_Value_PSF__c)), 3) 
+ &apos; &apos; + &apos;psf&apos;</formula>
        <label>Prev. High Value</label>
        <type>Text</type>
    </fields>
</CustomObject>